# eclipse_sim

./: .pre-commit-config.yaml  Agents.md  Agents_Testing.md  BOARD_STATE_SYNC_COMPLETE.md  BOARD_UPDATE_SUMMARY.md  CHANGES_SUMMARY.md  DEFICIT_FIX_SUMMARY.md  Eclipse Exploration Simulation.ipynb  Eclpise Combat Simulator.ipynb  FINAL_FIX_SUMMARY.md  IMPROVEMENTS.md  INTEGRATION_COMPLETE.md  LAUNCH_GUI.txt  LICENSE  MIGRATION_GUIDE.md  MULTI_ROUND_COMPLETE.md  MULTI_ROUND_QUICK_START.md  MULTI_ROUND_SIMULATION_PLAN.md  PHASE_1_COMPLETE.md  PREDICTION_FIX_SUMMARY.md  QUICK_START_BOARD_SYNC.md  QUICK_START_INTEGRATION.md  README.md  RENDERER_INTEGRATION.md  SETUP_GUIDE.md  Ship_Blueprints.json  Species_Starts.md  TUNING_GUIDE.md  eclipse_tiles.csv  example_usage.py  orion_full_turn.json  orion_round1.json  pyproject.toml  repo_dump.txt  start_gui.sh  state_tree_sim.ipynb  test_board_renderer_integration.py  test_board_sync_demo.py  test_manual_exploration.py  verify_integration.sh
.github/: PULL_REQUEST_TEMPLATE.md
.ipynb_checkpoints/: Eclipse Exploration Simulation-checkpoint.ipynb  Eclpise Combat Simulator-checkpoint.ipynb
data/: tech.json
docs/: CONTRIBUTING.md
eclipse_ai/: Agents.md  HEX_LAYOUT.md  __init__.py  alliances.py  board_parser.py  cleanup.py  cli.py  combat_phase.py  config.py  context.py  diplomacy.py  evaluator.py  exploration_intelligence.py  explore.py  explore_eval.py  forward_model.py  game_models.py  game_setup.py  hashing.py  hidden_info.py  image_ingestion.py  influence.py  main.py  movement.py  multi_round_runner.py  overlay.py  pathing.py  render_report.py  research.py  resource_colors.py  round_flow.py  round_simulator.py  rules_engine.py  scoring.py  search_policy.py  setup.py  ship_parts.py  species_data.py  state_assembler.py  tech_parser.py  (+6 more)
eclipse_ai.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
eclipse_sim.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
scripts/: merge_tech_costs_second_dawn.py
tests/: Agent_Legality_Checklist.md  TEST_UPDATES.md  orion_round1_state.json  run_test.py  test_build_and_design.py  test_cannons_computers_vs_shields.py  test_combat_missiles_ignore_shields.py  test_combat_missiles_initiative.py  test_combat_phase.py  test_config_merge.py  test_diplomacy_alliances.py  test_economy_actions.py  test_exploration_executor.py  test_exploration_intelligence.py  test_exploration_tiles_data.py  test_explore.py  test_hex_coordinates.py  test_legality_cases_orion.py  test_legality_gate.py  test_movement_rules.py  test_multi_round_board_state.py  test_multi_round_integration.py  test_no_damage_splitting.py  test_opponents_profiles.py  test_orion_full_turn.py  test_planner_legality_integration.py  test_point_defense_optional.py  test_population_tracks.py  test_prior_reweighting.py  test_pw_diagnostics_shape.py  test_random_turn_planning.py  test_scoring.py  (+13 more)
(+86 files in other folders)
