[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "eclipse-ai"
version = "0.1.0"
requires-python = ">=3.10"
description = "AI planning tools and simulators for Eclipse"
dynamic = ["dependencies"]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
    "ruff>=0.5.0",
    "black>=24.4.0",
    "mypy>=1.9.0",
    "pre-commit>=3.7.0",
]

[tool.setuptools]
packages = ["eclipse_ai"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.ruff]
line-length = 100
target-version = "py310"
[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
disallow_untyped_defs = true
ignore_missing_imports = true
